# cpmbot_ws

./: LICENSE  README.md  run_gazebo.sh  run_hardware.sh  state_handover20180207.odt  test_basic_movement.sh  test_operator.sh
Arduino/src/cpm_com_frame/: cpm_com_frame.ino
Arduino/src/cpm_com_frame20180501/cpm_com_frame/: cpm_com_frame.ino
src/cpmbot/: CMakeLists.txt  README.md  package.xml
src/cpmbot/config/: basic_movement.yaml  gazebo_control.yaml  hardware_control.yaml  hardware_diffdrive_controller (copy).yaml  hardware_diffdrive_controller.yaml  localization.yaml  operator.yaml
src/cpmbot/description/: cpmbot.xacro
src/cpmbot/description/gazebo/: base_link.gazebo  control.gazebo  imu.gazebo  kinect.gazebo.xacro
src/cpmbot/description/lib/: arm.urdf.xacro  inertia.xacro  mecanum_wheel.urdf.xacro  mecanum_wheel_with_joint.urdf.xacro  track_simulator.urdf.xacro  wheel.urdf.xacro  wheel_with_joint.urdf.xacro
src/cpmbot/description/obstacles/basico/: model.config  model.sdf
src/cpmbot/description/obstacles/basico_pasable/: model.config  model.sdf
src/cpmbot/description/obstacles/escalera/: model.config  model.sdf
src/cpmbot/description/robot/: arms.urdf.xacro  base_link.xacro  base_wheel.urdf.xacro  defaults.xacro  kinect.urdf.xacro  robotic_arm.urdf.xacro
src/cpmbot/launch/: gazebo.launch  hardware.launch  test_basic_movement.launch  test_operator.launch
src/cpmbot/msg/: cpmbot_basic.msg  cpmbot_detail.msg
src/cpmbot/src/: arosa.cpp  basic_movement.cpp  operator.cpp  sub_pub.cpp
src/ros_control_boilerplate/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/ros_control_boilerplate/cpmbot_control/: CMakeLists.txt  package.xml
src/ros_control_boilerplate/cpmbot_control/config/: cpmbot_controllers.yaml
src/ros_control_boilerplate/cpmbot_control/include/cpmbot_control/: cpmbot_hw_interface (copy).h  cpmbot_hw_interface.h
src/ros_control_boilerplate/cpmbot_control/launch/: cpmbot_hardware.launch
src/ros_control_boilerplate/cpmbot_control/src/: cpmbot_hw_interface (copy).cpp  cpmbot_hw_interface.cpp  cpmbot_hw_main.cpp
